--- a/Seminario - (FrontEnd)/package.json
+++ b/Seminario - (FrontEnd)/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "sweetalert2": "^11.7.16"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
